Finetuning SVG element with O shade

--- a/danceOmatic_logo.html
+++ b/danceOmatic_logo.html
@@ -16,7 +16,7 @@
 <div class="container-fluid;">
 
   <div class="card text-white text-uppercase"> 
-  <img src="../img/dmaskine_1.jpg" alt="picture of dancer with acrylic glass structure" class="card-img" style="filter: brightness(70%); object-fit:cover ; max-block-size: 500px;">
+  <img src="../img/dmaskine_1.jpg" alt="picture of danceOmatic" class="card-img" style="filter: brightness(70%); object-fit:cover ; max-block-size: 500px;">
   <div class="card-img-overlay">
           <h1 class="position-absolute" style="top:50%; left: 50%; transform: translate(-50%,-50%);">danceOmatic</h1>
         
@@ -25,7 +25,7 @@
   
   <div class="container my-5" id="skeleton">
   <object type="image/svg+xml" data="/assets/danceOmatic_logoT2.svg" id="danceOmatic_logo"></object>
-    
+  <object type="image/svg+xml" data="/assets/svg_elements/coin8bit.svg" id="coin8bit"></object>  
     <div class="row align-items-center">
        <div class="col-12">
          <h2 class="text-center">En fusion mellem en spillemaskine og live danseforestilling</p>
