--- a/danceOmatic_logo.html
+++ b/danceOmatic_logo.html
@@ -49,29 +49,28 @@
   <main>
     <!-- under layer -->
     <div class="zoomed-svg-container">
-      <object data="/assets/svg_elements/arcade.svg" id="arcade" class="zoomed-svg" type="image/svg+xml">  
-      </object>
-      <div class="svg-overlay">
-        <object type="image/svg+xml" data="/assets/danceOmatic_logoT2.svg" class="zoomed-svg" id="danceOmatic_logo"></object>
+      <object data="/assets/svg_elements/arcade.svg" id="arcade" class="zoomed-svg" type="image/svg+xml"></object>
+      <div class="svg-overlay-logo">
+        <object type="image/svg+xml" data="/assets/danceOmatic_logoT2.svg" id="danceOmatic_logo"></object>
       </div>
+      <div class="svg-overlay">
+      <object data="/assets/svg_elements/InsertToken.svg" type="image/svg+xml"></object>
     </div>
-  
+    </div>
+
     <div class="container-fluid">
+      <div class="row align-items-center">
+        <div class="col-lg-3">
+          <object data="/assets/svg_elements/coin8bit.svg" type="image/svg+xml"></object>
+        </div>
+        <div class="col-lg-7 align-items-right">
+          
+        </div>
+      </div>
+        
   </div>
 
-  
-
-  
-
 <!-- container -->
-
-
-
-
-
-
-
-
 </main>
 
 <script src="./js/bootstrap.bundle.min.js"></script>
