--- a/danceOmatic_logo.html
+++ b/danceOmatic_logo.html
@@ -53,15 +53,15 @@
       <div class="svg-overlay-logo">
         <object type="image/svg+xml" data="/assets/danceOmatic_logoT2.svg" id="danceOmatic_logo"></object>
       </div>
-      <div class="svg-overlay">
-      <object data="/assets/svg_elements/InsertToken.svg" type="image/svg+xml"></object>
+      <div class="svg-overlay-coin">
+      <!-- <object data="/assets/svg_elements/InsertToken.svg" type="image/svg+xml"></object> -->
+      <object data="/assets/svg_elements/coin8bit.svg" type="image/svg+xml" id="coin8bit"></object>
     </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row align-items-center">
-        <div class="col-lg-3">
-          <object data="/assets/svg_elements/coin8bit.svg" type="image/svg+xml"></object>
+  </div>
+  
+  <div class="container-fluid">
+    <div class="row align-items-center">
+      <div class="col-lg-3">
         </div>
         <div class="col-lg-7 align-items-right">
           
