improved logic in style.css without coin8bit or bling integration

--- a/danceOmatic_logo.html
+++ b/danceOmatic_logo.html
@@ -66,14 +66,14 @@
           </div>
 
           <div class="col-md-7 col-12">
-            <div class="container position-relative">
-              <object data="/assets/svg_elements/arcade.svg" id="arcade" class="zoomed-svg" type="image/svg+xml"></object>
-              <div class="svg-overlay-logo">
-                <object type="image/svg+xml" data="/assets/danceOmatic_logoT2.svg" id="danceOmatic_logo"></object>
-                <object data="/assets/svg_elements/coin8bit.svg" type="image/svg+xml" id="coin8bit"></object>
-                  <object data="/assets/svg_elements/Bling.svg" type="image/svg+xml" id="bling" class="bling-container"></object>
+            <div class="container zoomed-svg">
+              <object data="/assets/svg_elements/arcade.svg" id="arcade" class="" type="image/svg+xml"></object>
+              <div class="svg-container">
+                <object type="image/svg+xml" data="/assets/danceOmatic_logoT2.svg" id="danceOmatic_logo" class="overlay-danceOmatic-logo"></object>
               </div>
             </div>
+                <!-- <object data="/assets/svg_elements/coin8bit.svg" type="image/svg+xml" id="coin8bit" class="overlay-coin"></object>
+                <object data="/assets/svg_elements/Bling.svg" type="image/svg+xml" id="bling" class="bling-container"></object> -->
             
           </div>
 
