Changes my_script.js animation of coin8bit, to meet requirements of different screen size. Unsuccessfull. In progress.

--- a/danceOmatic_logo.html
+++ b/danceOmatic_logo.html
@@ -70,10 +70,10 @@
               <object data="/assets/svg_elements/arcade.svg" id="arcade" class="" type="image/svg+xml"></object>
               <div class="svg-container">
                 <object type="image/svg+xml" data="/assets/danceOmatic_logoT2.svg" id="danceOmatic_logo" class="overlay-danceOmatic-logo"></object>
+                <object data="/assets/svg_elements/coin8bit.svg" type="image/svg+xml" id="coin8bit" class="overlay-coin"></object> 
+                <object data="/assets/svg_elements/Bling.svg" type="image/svg+xml" id="bling" class="bling-container"></object>
               </div>
             </div>
-                <!-- <object data="/assets/svg_elements/coin8bit.svg" type="image/svg+xml" id="coin8bit" class="overlay-coin"></object>
-                <object data="/assets/svg_elements/Bling.svg" type="image/svg+xml" id="bling" class="bling-container"></object> -->
             
           </div>
 
