Improved BLING logic, same as class overlay-danceOmatic-logo

--- a/danceOmatic_logo.html
+++ b/danceOmatic_logo.html
@@ -66,7 +66,7 @@
           </div>
 
           <div class="col-md-7 col-12">
-            <div class="container zoomed-svg">
+            <div class="zoomed-svg">
               <object data="/assets/svg_elements/arcade.svg" id="arcade" class="" type="image/svg+xml"></object>
               <div class="svg-container">
                 <object type="image/svg+xml" data="/assets/danceOmatic_logoT2.svg" id="danceOmatic_logo" class="overlay-danceOmatic-logo"></object>
