changed coin animation using Intersection Observer API. Animation acceptable across screensizes.

--- a/danceOmatic_logo.html
+++ b/danceOmatic_logo.html
@@ -65,7 +65,7 @@
             </p>
           </div>
 
-          <div class="col-md-7 col-12">
+          <div class="col-md-7 col-12"> <!-- <-- denne som wrapper det hele -->
             <div class="zoomed-svg">
               <object data="/assets/svg_elements/arcade.svg" id="arcade" class="" type="image/svg+xml"></object>
               <div class="svg-container">
